# butterfly-signal

./: .gitignore  Cargo.toml  README.md  bun.lockb  flake.nix  package.json
crates/data_factory/: Cargo.toml
crates/data_factory/src/: lib.rs  mini_profile.rs
extension/: README.md  biome.json  bun.lockb  package.json  rsbuild.config.ts  tsconfig.json
extension/public/: background.js  manifest.json
extension/src/: App.svelte  background.ts  index.ts
extension/src/lib/: README.md  api.ts  cache.ts  chrome-utils.ts  config.ts  core.ts  dns.ts  error.ts  get-bsky.ts.txt  handlers.ts  index.ts
extension/src/lib/bsky/: api.ts  utils.ts
extension/src/lib_v1/: chrome-utils.ts
extension/src/lib_v2/: chrome-utils.ts  core.ts
extension/src/lib_v2/bsky/: api.ts
extension/src/scripts/: runner.ts
public/: manifest.json
src/lib/: chrome-utils.ts  handler.ts  utils.ts
wasm_mod/: Cargo.toml
