[package]
name = "data_factory"
version = "0.1.0"
edition = "2021"

crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = {version = "0.1.7", optional = true }
wasm-bindgen = "0.2.99"
web-sys = {version = "0.3.76", features = ["console"]}
